# pyside6-layer-shell

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  install.sh  requirements.txt
bindings/: module.cpp
docs/: ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CPP.md  DOCS.md  EXAMPLES.md  PYTHON.md
examples/cpp/: main.cpp
examples/python/: main.py
src/: layer_shell_adapter.cpp  layer_shell_adapter.h  layer_shell_config.h  main.cpp
